# jetdev

./: Cargo.toml  Dockerfile  commented.html
.github/workflows/: release.yml
src/: http_server.rs
wwwroot/: Index.html  ai  alex-alex  ar.html  dev  dev-ar
wwwroot/css/: site.css
wwwroot/js/: chat.min.js
