[package]
name = "jet-dev-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.2", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }


tokio = { version = "*", features = ["full"] }
tokio-util = "*"
